# DPCT

./: LICENSE  README.md
aes/CUDA/: aes.cu
clenergy/CUDA/: clenergy.cu
cuda-10.0.130-include-dir/: cudaEGL.h  cudaGL.h  cudaVDPAU.h  cuda_egl_interop.h  cuda_occupancy.h  cuda_runtime.h  cudnn.h  curand_kernel.h  curand_poisson.h  driver_types.h  nppcore.h  nppdefs.h  nppi_geometry_transforms.h  nppversion.h  sm_20_intrinsics.h  sm_20_intrinsics.hpp  sm_30_intrinsics.h  sm_30_intrinsics.hpp  vector_types.h
cuda-10.0.130-include-dir/crt/: device_functions.h  host_config.h  host_defines.h  host_runtime.h  math_functions.h  math_functions.hpp  mma.h  mma.hpp  sm_70_rt.h  sm_70_rt.hpp
heat/CUDA/: heat.cu
histogram/: histogram_compare_base.cpp  histogram_gmem_atomics.hpp
histogram-cuda/: histogram_gmem_atomics.h  histogram_smem_atomics.h  test_util.h
histogram/CUDA/: histogram_compare.cu
histogram/SYCL/: Makefile  histogram_smem_atomics.hpp
ising/CUDA/: main.cu
memadvise/CUDA/: setAccessBy.cu
quicksort/CUDA/: QuicksortMain.cu
quicksort/SYCL/: CMakeLists.txt  LICENSE  OpenCLUtils.h  Quicksort.h  QuicksortMain.cpp
raytrace/CUDA/: main.cu
rsbench/CUDA/: Makefile  compile_commands.json  simulation.cu
rsbench/CUDA/dpct_output/: Makefile  rsbench.h  simulation.cpp
saxpy/CUDA/: fp16_conversion.h  saxpy.cu
scan/CUDA/: scan.cu
